# advent-of-code-22

./: pyproject.toml
day1/: main.py
day10/: main.py
day11/: main.py
day12/: main.py
day13/: main.py
day2/: constants.py  main.py
day3/: constants.py  part1.py  part2.py
day4/: main.py
day5/: main.py
day6/: main.py
day7/: main.py
day8/: main.py
day9/: main.py
