[tool.poetry]
name = "advent-of-code-22"
version = "0.1.0"
description = ""
authors = ["João Braz Simões <joaosbraz@gmail.com>"]
readme = "README.md"
packages = [{ include = "advent_of_code_22" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
networkx = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
